# Carrer-Agent

./: .gitignore  claude.md  index.html  package-lock.json  package.json  vite.config.ts
backend/: .env.example  app.py  auth.py  conftest.py  lambda_handler.py  pyproject.toml
backend/agents/: coach.py  evaluator.py  intake.py  interviewer.py  memory.py  planner.py
backend/cli/: run_interview.py  run_session_start.py
backend/config/: settings.py
backend/data/competencies/: ai_engineer.json  sde.json
backend/evals/: test_interview_turn_eval.py  test_memory_eval.py  test_session_start_eval.py
backend/evals/golden/: interview_turn_cases.json  memory_cases.json  sde_backend_candidate.json
backend/graph/: interview_turn.py  session_end.py  session_start.py
backend/llm/: client.py  json_utils.py  tavus.py
backend/models/: contracts.py  loader.py  question_data.py
backend/prompts/: coach.md  evaluator.md  intake.md  interviewer.md  memory.md  planner.md
backend/routes/: session.py
backend/store/: base.py  dynamo.py  in_memory.py
backend/tests/: test_api_routes.py  test_coach_agent.py  test_contracts.py  test_e2e_simulation.py  test_evaluator_agent.py  test_intake_agent.py  test_interview_turn_graph.py  test_interviewer_agent.py  test_llm_client.py  test_loader.py  test_memory_agent.py  test_planner_agent.py  test_question_data.py  test_session_end_graph.py  test_session_start_graph.py  test_settings.py  test_store.py
deploy/: README.md  build-lambda.sh  deploy-backend.sh  deploy-frontend.sh  requirements-lambda.txt  setup-cognito.sh  setup-iam.sh
(+53 files in other folders)
