[project]
name = "interviewai-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "anthropic[bedrock]>=0.40",
  "langgraph>=0.2",
  "python-dotenv>=1.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "mangum>=0.18",
  "pyjwt[crypto]>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests", "evals"]
addopts = "-q"
